# Intelligent-Document-Processing-and-Insights-Dashboard

./: .env.example  .gitignore  Dockerfile  README.md  SETUP_CHECKLIST.md  docker-compose.yml  env.example  pyproject.toml
bigquery/: schema.sql  views.sql
cloud_functions/document_trigger/: main.py  requirements.txt
docs/: API.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PREREQUISITES.md  QUICK_START.md  USER_GUIDE.md
looker/: document_processing.model.lkml  documents.view.lkml  low_confidence_extractions.view.lkml  review_queue.view.lkml
scripts/: README.md  deploy.ps1  deploy.sh  run_tests.ps1  run_tests.sh  setup_gcp.ps1  setup_gcp.sh  setup_scheduler.sh
src/: config.py
src/annotation/: __init__.py  annotation_service.py
src/api/: main.py
src/api/models/: __init__.py  document.py  entity.py
src/api/routes/: documents.py  health.py  reports.py
src/extraction/: __init__.py  extraction_pipeline.py  gemini_client.py
src/ingestion/: audit_logger.py  metadata_extractor.py  status_tracker.py  storage_handler.py
src/reports/: __init__.py  report_generator.py
src/storage/: __init__.py  bigquery_loader.py
tests/integration/: test_extraction_pipeline.py
tests/unit/: test_api.py  test_gemini_client.py  test_metadata_extractor.py
